// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedTransitionGroup 1 blue 1`] = `
<div
  className="foo"
>
  <div
    style={
      Object {
        "backgroundColor": "pink",
      }
    }
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      style={
        Object {
          "color": "blue",
        }
      }
      value="blue"
    />
    <span
      style={
        Object {
          "paddingLeft": 10,
        }
      }
    >
      enter a color and blur it to change
    </span>
  </div>
</div>
`;

exports[`AnimatedTransitionGroup 1 red 1`] = `
<div
  className="foo"
>
  <div
    style={
      Object {
        "backgroundColor": "pink",
      }
    }
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      style={
        Object {
          "color": "red",
        }
      }
      value="red"
    />
    <span
      style={
        Object {
          "paddingLeft": 10,
        }
      }
    >
      enter a color and blur it to change
    </span>
  </div>
</div>
`;

exports[`AnimatedTransitionGroup 2 green 1`] = `
<div
  className="foo"
>
  <div
    style={
      Object {
        "backgroundColor": "pink",
      }
    }
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      style={
        Object {
          "color": "green",
        }
      }
      value="green"
    />
    <span
      style={
        Object {
          "paddingLeft": 10,
        }
      }
    >
      enter a color and blur it to change
    </span>
  </div>
</div>
`;

exports[`AnimatedTransitionGroup 2 orange 1`] = `
<div
  className="foo"
>
  <div
    style={
      Object {
        "backgroundColor": "pink",
      }
    }
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      style={
        Object {
          "color": "orange",
        }
      }
      value="orange"
    />
    <span
      style={
        Object {
          "paddingLeft": 10,
        }
      }
    >
      enter a color and blur it to change
    </span>
  </div>
</div>
`;
